declare_args() {
    split_binary = false
}

if (!split_binary) {
    executable("clickhouse") {
        sources = [ "programs/main.cpp" ]

        deps = [
            "src:string_utils",
            "programs:client",

            "//libs/libcommon:common",
        ]
    }
} else {
    executable("clickhouse-client") {
        sources = [ "programs/client/clickhouse-client.cpp" ]
        deps = [ "programs:client" ]
    }

    group("clickhouse") {
        deps = [
            ":clickhouse-client",
        ]
    }
}
