config("private") {
    defines = [
        "POCO_EXTERNAL_OPENSSL",
        "POCO_HAVE_FD_EPOLL",
        "POCO_UNBUNDLED",
        "_FILE_OFFSET_BITS=64",
        "_LARGEFILE64_SOURCE",
        "_REENTRANT",
        "_THREAD_SAFE",
        "_XOPEN_SOURCE=500",
    ]
}

config("public") {
    include_dirs = [ "//contrib/poco/Foundation/include" ]
}

target(library, "PocoFoundation") {
    sources = [
        "//contrib/poco/Foundation/src/Exception.cpp",
    ]

    public = [
        "//contrib/poco/Foundation/include/Poco/Exception.h",
    ]

    configs += [ ":private" ]
    public_configs = [ ":public" ]
}
